test/classes/initializers/errors/errHandling/initWithThrow.good
initWithThrow.chpl:7: In initializer:
initWithThrow.chpl:9: error: initializers are not yet allowed to throw errors
